dispatch 48% and cleanup